[package]
authors = ["enzo <enzopoeta@gmail.com>"]
edition = "2018"
name = "rust_keycloak_token_validator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-rt = "2.3.0"
actix-web = {version = "4.2.1", features = ["openssl"]}
cached = "0.40.0"
clap = {version = "4.0.27", features = ["derive"]}
env_logger = "0.10.0"
jsonwebtoken = {version = "8.1.1", features = ["use_pem"]}
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.16.0"
openssl = "0.10.30"
reqwest = {version = "0.11", features = ["json"]}
serde = "1.0.118"
serde_json = "1.0.89"
tokio = {version = "1", features = ["full"]}
